--- a/Best Backend/package.json
+++ b/Best Backend/package.json
@@ -20,7 +20,8 @@
     "express": "^5.2.1",
     "express-rate-limit": "^8.2.1",
     "jsonwebtoken": "^9.0.3",
-    "mongoose": "^9.1.3"
+    "mongoose": "^9.1.3",
+    "zod": "^4.3.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
